# auctus-showcase

./: .env.example  .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  mcp_config.json  pyproject.toml
.agents/: AGENTS.md
.claude/: settings.json
.claude/commands/: 3-statement-model.md  audit-xls.md  competitor-analysis.md  dcf-valuation.md  dd-checklist.md  ic-memo.md  lbo-modeling.md  pitch-deck.md  pptx-author.md  relative-valuation.md  returns-analysis.md  screen-deal.md  sector-overview.md  unit-economics.md  value-creation-plan.md  xlsx-author.md
config/: auctus_criteria.yaml  financial_constants.yaml  sector_benchmarks.yaml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/scripts/: trigger_agent.sh  watch_inputs.sh
scripts/: comps_engine.py  data_ingest.py  dcf_engine.py  deck_builder.py  lbo_engine.py  memo_generator.py  precedent_engine.py  report_builder.py  sensitivity.py  target_scorer.py
scripts/archive/: comps_engine.py  data_ingest.py  dcf_engine.py  fix_deck.py  fix_syntax.py  fix_syntax2.py  lbo_engine.py  precedent_engine.py  sensitivity.py  target_scorer.py
skills/3-statement-model/: SKILL.md
skills/3-statement-model/refs/: formatting.md  formulas.md  sec-filings.md
skills/audit-xls/: SKILL.md
skills/competitor-analysis/: SKILL.md
skills/competitor-analysis/refs/: frameworks.md  output-template.md  schemas.md  scoring-rubric.md  sector-taxonomy.yaml
skills/dcf-valuation/: SKILL.md
skills/dcf-valuation/refs/: projection-guide.md  sensitivity-config.yaml  wacc-assumptions.yaml
skills/dd-checklist/: SKILL.md
skills/deck-refresh/: SKILL.md
skills/ib-check-deck/: SKILL.md
skills/ib-check-deck/references/: ib-terminology.md  report-format.md
skills/ic-memo/: SKILL.md
skills/idea-generation/: SKILL.md
skills/lbo-modeling/: SKILL.md
skills/market-researcher/: SKILL.md
skills/model-builder/: SKILL.md
skills/pitch-agent/: SKILL.md
skills/pitch-deck/: SKILL.md
skills/pptx-author/: SKILL.md
skills/relative-valuation/: SKILL.md
skills/returns-analysis/: SKILL.md
skills/screen-deal/: SKILL.md
skills/sector-overview/: SKILL.md
skills/unit-economics/: SKILL.md
skills/value-creation-plan/: SKILL.md
skills/xlsx-author/: SKILL.md
tests/: conftest.py  test_comps_engine.py  test_dcf_engine.py  test_deck_builder.py  test_lbo_engine.py  test_memo_generator.py  test_target_scorer.py
tests/archive/: test_comps_engine.py  test_dcf_engine.py  test_lbo_engine.py  test_target_scorer.py
(+9 files in other folders)
