[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "auctus-agent-platform"
version = "1.0.0"
description = "AUCTUS Capital Partners AG — Autonomous PE Analysis Platform"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "openpyxl>=3.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # Phase-1: FactSet MCP integration (optional — required only for --source factset-mcp)
    "anthropic>=0.40",
    # Phase-3: Pitch deck and IC memo generation
    "python-pptx>=0.6.23",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.12",
    "isort>=5.13",
    "mypy>=1.7",
    "pandas-stubs>=2.1",
    "ruff>=0.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive", "tests/archive"]
addopts = "-v --tb=short --cov=scripts --cov-report=term-missing"
minversion = "7.4"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
